src/core-crm/main/default/objects/newobject5__c/newobject5__c.object-meta.xml
<CustomObject>
    <label>newobject5</label>
    <nameField>
        <label>newobject5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>newobject5</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>