src/core-crm/main/default/objects/newobject5__c/fields/customobject5field10__c.field-meta.xml
<CustomField>
    <fullName>customobject5field10__c</fullName>
    <label>customobject5field10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>something</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>