src/core-crm/main/default/objects/newobject5__c/fields/newobject5field12__c.field-meta.xml
<CustomField>
    <fullName>newobject5field12__c</fullName>
    <label>newobject5field12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>something</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>